--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - NOTIFI_ENV=${NOTIFI_ENV:-}
       - HOST_USER_ID=${HOST_USER_ID}
       - HOST_GROUP_ID=${HOST_GROUP_ID}
-      - HOME_DIRECTORY_OVERRIDE=/home\
+      - HOME_DIRECTORY_OVERRIDE=/home
       - NOTIFI_DEV_CONTAINER=true
     ports:
       - "9229:9229"
