--- a/assets/baseparsers/evm-parser/package.json
+++ b/assets/baseparsers/evm-parser/package.json
@@ -17,15 +17,16 @@
   "devDependencies": {
     "@notifi-network/fusion-types": "^3.0.0",
     "@rollup/plugin-commonjs": "25.0.7",
-    "@rollup/plugin-node-resolve": "15.2.3",
-    "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "11.1.5",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
     "nodemon": "3.0.2",
     "rollup": "4.9.1",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
+    "tslib": "^2.6.2",
     "typescript": "5.3.3"
   },
   "dependencies": {
