--- a/assets/baseparsers/evm-parser/package.json
+++ b/assets/baseparsers/evm-parser/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.10.5",
     "nodemon": "3.0.2",
     "rollup": "4.9.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "tslib": "^2.6.2",
