chore: bump version of local fusion & rmeove unused build:upload npm scripts

--- a/assets/baseparsers/offchain-parser/package.json
+++ b/assets/baseparsers/offchain-parser/package.json
@@ -8,8 +8,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "build": "npx rollup -c rollup.config.js",
     "debug": "node --inspect-brk=0.0.0.0:9229 --require=ts-node/register --loader ts-node/esm src/parser.ts",
-    "watch": "nodemon --watch ./src --ext ts --exec npm run debug --legacy-watch",
-    "build:upload": "npm run build && node graphql/uploadParser.js"
+    "watch": "nodemon --watch ./src --ext ts --exec npm run debug --legacy-watch"
   },
   "keywords": [],
   "author": "",
