--- a/assets/baseparsers/offchain-parser/package.json
+++ b/assets/baseparsers/offchain-parser/package.json
@@ -32,6 +32,7 @@
     "uuid": "^9.0.0"
   },
   "dependencies": {
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "@notifi-network/local-fusion": "3.2.3"
   }
 }
